--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,16 @@ body {
 #smooth-content {
   will-change: transform;
 }
+
+.animate-marquee{
+  animation: marquee 25s linear infinite;
+}
+
+@keyframes marquee{
+  0%{
+    transform: translateX(0);
+  }
+  100%{
+    transform: translateX(-50%);
+  }
+}
